styles/globals.css
@import url("normalize");

:root {
  --base-strong: #141516;
  --base-strong-shadow: #141516 40%;
  --base-strong-box-shadow: rgb(0 0 0 / 25%);
  --base-weak: #FFF;
  --faint-strong: #363636;
  --faint-weak: #A29581;
  --accent-strong: #F5A932;
  --accent-weak: #F2DCBB;
  --complement-strong: #59345C;
  --complement-weak: #A17BA4;
  --faint-strong-up: #2B2B2B;
  --font-family: "Montserrat", sans-serif;
  --fancy-accent-weak: linear-gradient(90deg, var(--accent-weak) 0%, var(--accent-strong) 100%);
  --fancy-accent-weak-reversed: linear-gradient(90deg, var(--accent-strong) 0%, var(--accent-weak) 100%);
  --fancy-complement-weak: linear-gradient(90deg, var(--complement-weak) 0%, var(--accent-weak) 100%);
  --fancy-complement-weak-reversed: linear-gradient(90deg, var(--accent-weak) 0%, var(--complement-weak) 100%);
}

html,
body {
  overflow-x: hidden;

  box-sizing: border-box;

  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;

  color: var(--accent-weak);
  background-color: var(--base-strong);

  font-family: var(--font-family);
  font-size: 100%;
  font-weight: 600;
}

a {
  text-decoration: none;

  color: inherit;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

.rounded {
  border-radius: 1.75rem;
}

.visually-hidden {
  position: absolute;

  overflow: hidden;

  width: 0;
  height: 0;
}

button {
  display: inline-flex;
  align-items: center;
  justify-content: center;

  padding: 10px;

  border-color: transparent;
}

button:focus-visible {
  outline: 2px solid var(--base-weak);
  outline-offset: 3px;
}

